--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
-  "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "ts-jest": "^27.1.3",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.5.5"
-  },
-  "name": "store",
+  "name": "rsstore",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "version": "0.0.1",
   "description": "A simple pub/sub store with a simple api.",
-  "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only .",
-    "test:watch": "jest --watch",
-    "test": "jest"
+    "dev": "npm run dev -ws",
+    "test:watch": "npm test -ws -- --watch",
+    "test": "npm test -ws"
   },
   "keywords": [
     "store",
@@ -21,5 +18,11 @@
     "pubsub"
   ],
   "author": "Gnarus-G",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/jest": "^27.4.0",
+    "ts-jest": "^27.1.3",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.5"
+  }
 }
