--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,6 +8,7 @@
     "dist"
   ],
   "scripts": {
+    "build": "rm -rf dist && tsc",
     "dev": "ts-node-dev --respawn --transpile-only .",
     "test:watch": "jest --watch",
     "test": "jest"
