--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2"
   },
   "scripts": {
+    "build": "rm -rf dist && tsc",
     "test:watch": "jest --watch",
     "test": "jest"
   },
